# SciGlob-Library

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Copy of Firmware Commands & Versions - V7.csv  LICENSE  README.md  SCIGLOB_COMMAND_REFERENCE.md  SCIGLOB_LIBRARY_SPEC.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AUTOMATION_GUIDE.md  PLATFORM_ARCHITECTURE.md  PLATFORM_ARCHITECTURE_PART2.md  QUICK_REFERENCE.md
examples/: automation_usage.py  basic_usage.py
examples/routines/: DK.rout  DS.rout  SK.rout  SS.rout
examples/schedules/: daily_measurement.sked  moon_observation.sked
sciglob/: __init__.py
sciglob/automation/: __init__.py  exceptions.py  executor.py  routines.py  schedules.py  timing.py
sciglob/config/: __init__.py  hardware.py  settings.py
sciglob/core/: __init__.py  base.py  commands.py  connection.py  exceptions.py  help_mixin.py  protocols.py  utils.py
sciglob/devices/: __init__.py  filter_wheel.py  head_sensor.py  humidity_sensor.py  positioning.py  shadowband.py  temperature_controller.py  tracker.py
tests/: __init__.py  conftest.py  test_core.py  test_devices.py  test_filter_wheel.py  test_head_sensor.py  test_tracker.py
